--- a/app/deployment.yaml
+++ b/app/deployment.yaml
@@ -20,7 +20,9 @@ spec:
         resources:
           requests: 
             cpu: "100m"
+            memory: "128Mi"
           limits: 
             cpu: "200m"
+            memory: "256Mi"
         ports:
         - containerPort: 80
